# XcelMerger

./: LICENSE  README.md  check.sh  docker-compose.yml  pyproject.toml  run.sh  setup.cfg  test.db  users.db
.github/workflows/: deploy.yml  tests.yml
common/: logging_config.py  settings.py
common/databases/: engines.py  models.py
services/auth/: Dockerfile  requirements.txt
services/auth/src/: main.py  models.py  user_db.py
services/auth/tests/: conftest.py  test_auth.py
services/frontend/: Dockerfile
services/frontend/src/: app.py
services/frontend/src/static/: script.js  styles.css
services/frontend/src/templates/: index.html  upload.html
services/frontend/tests/: test_frontend.py
